--- a/src/components/MyBids.scss
+++ b/src/components/MyBids.scss
@@ -65,3 +65,7 @@
   margin-left: 2em;
   margin-top: 80px;
 }
+
+.top-element {
+  margin-top: $margin-top;
+}
